MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/Business_Process_Step__c.object-meta.xml
<CustomObject>
    <label>Business Process Step</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Process Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>