MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Assigned_to_Request_Creator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Request_Creator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to Request Creator</label>
    <type>Checkbox</type>
</CustomField>