MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Assigned_With_Required_Info_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_With_Required_Info_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned With Required Info Time</label>
    <type>DateTime</type>
</CustomField>