MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>Business Process Steps</relationshipLabel>
    <relationshipName>Business_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>