MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Business_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Name__c</fullName>
    <formula>Business_Process__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Process Name</label>
    <type>Text</type>
</CustomField>