MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Business_Process_Steps_Name_Custom__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Steps_Name_Custom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Process Step Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>