MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Calculate_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Time_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calculate Time 2</label>
    <type>DateTime</type>
</CustomField>