MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/canMassUpdate__c.field-meta.xml
<CustomField>
    <fullName>canMassUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>canMassUpdate</label>
    <type>Checkbox</type>
</CustomField>