MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <label>Completed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>