MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Completed_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_Hours__c</fullName>
    <label>Completed in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>