MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Escalated_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Time__c</fullName>
    <description>Escalated Time</description>
    <label>Escalated Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>