MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Escalation_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Escalation_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation 1 Sent</label>
    <type>Checkbox</type>
</CustomField>