MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Escalation_3_sent__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation 3 sent</label>
    <type>Checkbox</type>
</CustomField>