MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Execute_on_submit__c.field-meta.xml
<CustomField>
    <fullName>Execute_on_submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute on submit</label>
    <type>Checkbox</type>
</CustomField>