MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Expected_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Time__c</fullName>
    <description>Expected Completion Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Completion Time</label>
    <type>DateTime</type>
</CustomField>