MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Field_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Field_Rendering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Rendering</label>
    <type>Checkbox</type>
</CustomField>