MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Form_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Form_Rendering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Rendering</label>
    <type>Checkbox</type>
</CustomField>