MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Approve_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Approve_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Approve button required in the approval modal?</description>
    <inlineHelpText>Is the Approve button required in the approval modal?</inlineHelpText>
    <label>Is Approve Required</label>
    <type>Checkbox</type>
</CustomField>