MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Management_Step__c.field-meta.xml
<CustomField>
    <fullName>Is_Management_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Management Step</label>
    <type>Checkbox</type>
</CustomField>