MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Multi_Select_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Is_Multi_Select_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multi Select Reopen</label>
    <type>Checkbox</type>
</CustomField>