MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Reject_Button_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Reject_Button_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reject Button Required</label>
    <type>Checkbox</type>
</CustomField>