MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Required_More_Button_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required_More_Button_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required More Button Required</label>
    <type>Checkbox</type>
</CustomField>