MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Review_Comments_Req__c.field-meta.xml
<CustomField>
    <fullName>Is_Review_Comments_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Review Comments Req</label>
    <type>Checkbox</type>
</CustomField>