MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Is_Sequence_Business_Process_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Sequence_Business_Process_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to identify the set of business of business process records need to be created after the step approval</description>
    <label>Is Sequence Business Process Available</label>
    <type>Checkbox</type>
</CustomField>