MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Last_Reassign_from__c.field-meta.xml
<CustomField>
    <fullName>Last_Reassign_from__c</fullName>
    <description>Last Reassign from</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Reassign from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>