MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Last_reopen_time__c.field-meta.xml
<CustomField>
    <fullName>Last_reopen_time__c</fullName>
    <description>Last reopen time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last reopen time</label>
    <type>DateTime</type>
</CustomField>