MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Multi_Select_Step_Required_Info_Step__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Step_Required_Info_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Select Step Required Info Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Process Steps (Multi Select Step Required Info Step)</relationshipLabel>
    <relationshipName>Business_Process_Steps1</relationshipName>
    <type>Lookup</type>
</CustomField>