MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Re_assign_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_assign_Count__c</fullName>
    <description>Re assign Count</description>
    <label>Re assign Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>