MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Re_Assigned_by__c.field-meta.xml
<CustomField>
    <fullName>Re_Assigned_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Re Assigned by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>