MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Re_Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_Open_Count__c</fullName>
    <label>Re Open Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>