MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Re_Opened_By__c.field-meta.xml
<CustomField>
    <fullName>Re_Opened_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Re Opened By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>