MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Re_Opened_For_More_Info_Tiime__c.field-meta.xml
<CustomField>
    <fullName>Re_Opened_For_More_Info_Tiime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Re Opened For More Info Tiime</label>
    <type>DateTime</type>
</CustomField>