MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/remainder2__c.field-meta.xml
<CustomField>
    <fullName>remainder2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>remainder2</label>
    <type>DateTime</type>
</CustomField>