MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/remainderDate1__c.field-meta.xml
<CustomField>
    <fullName>remainderDate1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>remainderDate1</label>
    <type>DateTime</type>
</CustomField>