MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/remainderFlag__c.field-meta.xml
<CustomField>
    <fullName>remainderFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>remainderFlag</label>
    <type>Checkbox</type>
</CustomField>