MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Remarks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>