MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required More Info Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>