MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Required_Info_Step__c.field-meta.xml
<CustomField>
    <fullName>Required_Info_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Info Step</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Process Steps</relationshipLabel>
    <relationshipName>Business_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>