MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Required_Info_Step_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Required_Info_Step_Sequence__c</fullName>
    <label>Required Info Step Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>