MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Skip_Step_To_Reopen__c.field-meta.xml
<CustomField>
    <fullName>Skip_Step_To_Reopen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Step To Reopen</label>
    <type>Checkbox</type>
</CustomField>