MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Step_Accepted_time__c.field-meta.xml
<CustomField>
    <fullName>Step_Accepted_time__c</fullName>
    <description>Accepted Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Step Accepted time</label>
    <type>DateTime</type>
</CustomField>