MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Step_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Step_Open_Time__c</fullName>
    <description>When step comes to the action</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Step Open Time</label>
    <type>DateTime</type>
</CustomField>