MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Step_Ownership_Summary__c.field-meta.xml
<CustomField>
    <fullName>Step_Ownership_Summary__c</fullName>
    <description>Step Ownership Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Step Ownership Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>