MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/fields/Time_Log_Map__c.field-meta.xml
<CustomField>
    <fullName>Time_Log_Map__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Log Map</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>