MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/validationRules/Validate_File_Upload.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_File_Upload</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;  TEXT(Status__c) = &apos;Completed&apos;</errorConditionFormula>
    <errorMessage>Testing File Upload Validation - &amp;&amp; Business_Process_Name__c = &apos;DGM Marketing Approval For Design&apos;</errorMessage>
</ValidationRule>