MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/CM_Manager_Queue_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>CM_Manager_Queue_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>CM Manager Queue</label>
    <queue>CM_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>