MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/Collection_Queue_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>Collection_Queue_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>Collection Queue</label>
    <queue>Collection_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>