MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/EOI_Management_Approval_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>EOI_Management_Approval_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>EOI Management Approval</label>
    <queue>EOI_Management_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>