MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/EP_Verify_Request_Queue_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>EP_Verify_Request_Queue_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>EP Verify Request Queue</label>
    <queue>EP_Verify_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>