MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/External_Council_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>External_Council_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>External Council</label>
    <queue>External_Council</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>