MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/Finance_Queue_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>Finance_Queue_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Queue</label>
    <queue>Finance_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>