MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Step__c/listViews/Handover_Business_Process_Step.listView-meta.xml
<ListView>
    <fullName>Handover_Business_Process_Step</fullName>
    <filterScope>Queue</filterScope>
    <label>Handover</label>
    <queue>Handover</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>